<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/edit_activity_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/edit_activity_name_title"
            android:textColor="#2B3D4D"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edit_activity_margin"
            android:fontFamily="sans-serif"
            android:text="@string/default_product_name"
            android:textSize="22sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_activity_margin">

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/product_price_title"
            android:textColor="#2B3D4D"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edit_activity_margin"
            android:fontFamily="sans-serif"
            android:inputType="numberDecimal"
            android:text="@string/default_product_price"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_activity_margin">

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/edit_activity_quantity_title"
            android:textColor="#2B3D4D"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edit_activity_margin"
            android:fontFamily="sans-serif"
            android:inputType="number"
            android:text="@string/default_product_quantity"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_activity_margin">

        <Button
            android:id="@+id/btn_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edit_activity_margin"
            android:layout_marginTop="@dimen/edit_activity_margin"
            android:layout_weight="1"
            android:onClick="onModifyQuantity"
            android:text="@string/btn_quantity" />

        <Button
            android:id="@+id/btn_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edit_activity_margin"
            android:layout_marginTop="@dimen/edit_activity_margin"
            android:layout_weight="1"
            android:onClick="onOrder"
            android:text="@string/btn_order" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/edit_activity_margin"
        android:layout_marginTop="@dimen/edit_activity_margin"
        android:onClick="onSave"
        android:text="@string/btn_save" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/edit_activity_margin"
        android:layout_marginTop="@dimen/edit_activity_margin"
        android:backgroundTint="@android:color/holo_red_dark"
        android:onClick="onDelete"
        android:text="@string/btn_delete" />

</LinearLayout>